fix: security and ui